--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,11 @@ repositories {
 }
 
 dependencies {
+	// Spring Boot Starter for Mail
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	// redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 	// JWT
 	compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
